# SDL_workshop

FlameSteelCore/: .gitignore  Android.mk  CMakeLists.txt  README.md  SaberPlusProject.spproject  osxCrossRebuild.sh
FlameSteelCore/src/FlameSteelCore/: Controller.cpp  Controller.h  FSCUtils.cpp  FSCUtils.h  LICENSE  Object.cpp  Object.h  Objects.cpp  Objects.h  Serializable.cpp  Serializable.h  SharedNotNullPointer.h  Unused.h  Utils.h
SDL3D/docs/: Dependencies.txt
SDL3D/src/: Definitions.hpp  PhysicsBody.hpp
